<resources>
    <string name="app_name">FlyingPlate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_mobile">Mobile Number</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_up">Sign up</string>
    <string name="owner_register_url">https://flyingplate.herokuapp.com/api/resturentowner/register</string>
    <string name="title_activity_owner_home">OwnerHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_exit">Logout</string>
    <string name="no_records_found_please_update_the_profile">No records found , Please update the profile</string>
    <string name="food_place">Food Place</string>
    <string name="price">$ price</string>
    <string name="food_name">Food Name</string>
    <string name="login_page">Login Page</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signin">SIGNIN</string>
    <string name="not_have_an_account_signup_here">Not have an account ? Signup Here</string>
    <string name="sign_in">Sign In</string>
    <string name="signup">SignUp</string>
    <string name="thank_you">Thank You</string>
    <string name="your_order_has_been_placed_n_successfully">Your order has been placed  successfully</string>
    <string name="estimated_delivery">Estimated Delivery</string>
    <string name="in_20_minutes">in 20 minutes</string>
    <string name="_7_items_will_be_delivered_at">7 items will be delivered at</string>
    <string name="_8_maria_avu_uncasvile_ct_06382">8 Maria Avu, Uncasvile, CT, 06382</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="save_information">Save Information</string>
    <string name="profile_page">Profile Page</string>
    <string name="view_information">View Information</string>
    <string name="edit_information">Edit Information</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="contact_details">Contact Details</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_phonenumber">Enter your PhoneNumber</string>
    <string name="enter_your_zipcode">Enter your ZipCode</string>
    <string name="promotional_codes">Promotional Codes</string>
    <string name="enter_your_coupon_code">Enter your Coupon Code</string>
    <string name="enter">Enter</string>
    <string name="amount">Amount</string>
    <string name="promotional_discount">Promotional Discount</string>
    <string name="total_amount">Total Amount</string>
    <string name="proceed">PROCEED</string>
    <string name="_0">$0</string>
    <string name="registration_page">Registration Page</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="already_registered_sign_in_here">Already Registered? Sign in here</string>
    <string name="_1">1</string>
    <string name="_10">10</string>
    <string name="_200">$ 200</string>
    <string name="pineapple">Pineapple</string>
    <string name="american">American</string>
    <string name="indian">Indian</string>
    <string name="mexican">Mexican</string>
    <string name="italian">Italian</string>
    <string name="chinese">Chinese</string>
    <string name="japanese">Japanese</string>
    <string name="_11111">#11111</string>
    <string name="status">Status</string>
    <string name="_1234567889">1234567889</string>
    <string name="address">Address</string>
    <string name="user_information">User Information</string>
</resources>
