<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/login_page"
            android:id="@+id/textLogin"
            android:gravity="center"/>
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/TextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_address"
            android:layout_margin="15dp"/>
        <EditText
            android:inputType="textPassword"
            android:id="@+id/TextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:layout_margin="15dp"/>
        <TextView
            android:textAlignment="textEnd"
            android:text="@string/forgot_password"
            android:id="@+id/forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            />
        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/round_button"
            android:text="@string/signin"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:visibility="visible" />
        <TextView
            android:textAlignment="center"
            android:text="@string/not_have_an_account_signup_here"
            android:id="@+id/Signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>