<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@drawable/background"
    android:paddingTop="25dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="100dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/profile_page"
            android:id="@+id/textProfile"
            android:gravity="center"/>
        <EditText
            android:id="@+id/TextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:layout_margin="15dp"/>
        <EditText
            android:id="@+id/textAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_address"
            android:layout_margin="15dp"/>
        <EditText
            android:id="@+id/textPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/enter_your_phonenumber"
            android:layout_margin="15dp"/>
        <Button
            android:id="@+id/saveInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/save_information"
            android:layout_margin="15dp"
            />
   </LinearLayout>
</RelativeLayout>