<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/registration_page"
            android:id="@+id/textLogin"
            android:gravity="center"
            />
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/TextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_address"
            android:layout_margin="15dp"/>
        <EditText
            android:inputType="textPassword"
            android:id="@+id/TextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:layout_margin="15dp"/>
        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/register"
            android:layout_margin="15dp"
            />
        <TextView
            android:textAlignment="center"
            android:text="@string/already_registered_sign_in_here"
            android:id="@+id/Signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>