<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShippingDetails">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="Flying Plates"
            app:titleTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="100dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/contact_details"
                android:id="@+id/textProfile"
                />
            <EditText
                android:id="@+id/TextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name"
                android:layout_margin="15dp"/>
            <EditText
                android:id="@+id/textAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_address"
                android:layout_margin="15dp"/>
            <EditText
                android:id="@+id/textPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/enter_your_phonenumber"
                android:layout_margin="15dp"/>
            <EditText
                android:id="@+id/textZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/enter_your_zipcode"
                android:layout_margin="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/promotional_codes"
                android:id="@+id/textCoupon"
                />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_height="wrap_content" android:orientation="horizontal"
                android:layout_width="fill_parent">
                <EditText
                    android:id="@+id/coupon"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:layout_weight="1"
                    android:hint="@string/enter_your_coupon_code"
                    android:layout_width="fill_parent">
                </EditText>
                <Button  android:text="@string/enter"
                    android:id="@+id/Enter"
                    android:background="@drawable/capsule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Button>
            </LinearLayout>
            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="*"> <!-- stretch the second column of the layout-->

                <!-- first row of the table layout-->
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <!-- first element of the row-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="18dip"
                        android:text="@string/amount"
                        android:textColor="#000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/TotalAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="18dip"
                        android:textColor="#000"
                        android:textSize="14sp" />

                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <!-- first element of the row-->
                    <TextView
                        android:id="@+id/coupon_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="18dip"
                        android:text="@string/promotional_discount"
                        android:textColor="#000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/TotalPromotionalAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="18dip"
                        android:textColor="#FF0000"
                        android:textSize="14sp" />
                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="18dip"
                        android:text="@string/total_amount"
                        android:textColor="#000"
                        android:textSize="12sp" />
                    <TextView
                        android:id="@+id/TotalFinalAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="18dip"
                        android:textColor="#000"
                        android:textSize="14sp" />
                </TableRow>
            </TableLayout>
            </LinearLayout>
    <LinearLayout
        android:id="@+id/proceed_to_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_weight=".2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/proceed"
            android:textColor="#fff"
            android:gravity="right|center_vertical"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="15dp"/>

        <TextView
            android:padding="15dp"
            android:layout_marginStart="5dp"
            android:id="@+id/shipping_total_cart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textSize="20sp"
            android:textColor="#fff"
            android:gravity="left|center_vertical"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>
</RelativeLayout>