<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardElevation="4dp">
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="9"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/order_id"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical|start"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/_11111"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/order_status"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical|start"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/status"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/order_phone"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical|start"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/_1234567889"
            android:textStyle="italic"
            />
        <TextView
            android:id="@+id/order_address"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical|start"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/address"
            android:textStyle="italic"
            />
    </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>