<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveProfileInformation"
    android:background="@drawable/background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="100dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/profile_page"
            android:id="@+id/textProfile"
            android:gravity="center"
            android:paddingBottom="100dp"/>
        <Button
            android:id="@+id/buttonView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_button"
            android:text="@string/view_information"
            />
        <Button
            android:id="@+id/saveInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_information"
            android:background="@drawable/round_button"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>

</RelativeLayout>